--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonEntrar"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
